--- a/G4G/G4G.csproj
+++ b/G4G/G4G.csproj
@@ -43,8 +43,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arrays.cs" />
+    <Compile Include="Battleship.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Skyline.cs" />
+    <Compile Include="Stacks.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
